fixed calculating order columns

--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 77,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-10-14T22:09:36.999791803Z",
-     "start_time": "2023-10-14T22:09:36.897377838Z"
+     "end_time": "2023-10-15T16:32:24.053388019Z",
+     "start_time": "2023-10-15T16:32:22.271792570Z"
     }
    },
    "outputs": [
@@ -70,14 +70,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 78,
    "outputs": [
     {
      "data": {
       "text/plain": "    school sex  age address famsize Pstatus  Medu  Fedu      Mjob      Fjob  \\\n0       GP   F   18       U     GT3       A     4     4   at_home   teacher   \n1       GP   F   17       U     GT3       T     1     1   at_home     other   \n2       GP   F   15       U     LE3       T     1     1   at_home     other   \n3       GP   F   15       U     GT3       T     4     2    health  services   \n4       GP   F   16       U     GT3       T     3     3     other     other   \n..     ...  ..  ...     ...     ...     ...   ...   ...       ...       ...   \n390     MS   M   20       U     LE3       A     2     2  services  services   \n391     MS   M   17       U     LE3       T     3     1  services  services   \n392     MS   M   21       R     GT3       T     1     1     other     other   \n393     MS   M   18       R     LE3       T     3     2  services     other   \n394     MS   M   19       U     LE3       T     1     1     other   at_home   \n\n     ... famrel freetime  goout  Dalc  Walc health absences  G1  G2  G3  \n0    ...      4        3      4     1     1      3        6   5   6   6  \n1    ...      5        3      3     1     1      3        4   5   5   6  \n2    ...      4        3      2     2     3      3       10   7   8  10  \n3    ...      3        2      2     1     1      5        2  15  14  15  \n4    ...      4        3      2     1     2      5        4   6  10  10  \n..   ...    ...      ...    ...   ...   ...    ...      ...  ..  ..  ..  \n390  ...      5        5      4     4     5      4       11   9   9   9  \n391  ...      2        4      5     3     4      2        3  14  16  16  \n392  ...      5        5      3     3     3      3        3  10   8   7  \n393  ...      4        4      1     3     4      5        0  11  12  10  \n394  ...      3        2      3     3     3      5        5   8   9   9  \n\n[395 rows x 33 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>school</th>\n      <th>sex</th>\n      <th>age</th>\n      <th>address</th>\n      <th>famsize</th>\n      <th>Pstatus</th>\n      <th>Medu</th>\n      <th>Fedu</th>\n      <th>Mjob</th>\n      <th>Fjob</th>\n      <th>...</th>\n      <th>famrel</th>\n      <th>freetime</th>\n      <th>goout</th>\n      <th>Dalc</th>\n      <th>Walc</th>\n      <th>health</th>\n      <th>absences</th>\n      <th>G1</th>\n      <th>G2</th>\n      <th>G3</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>GP</td>\n      <td>F</td>\n      <td>18</td>\n      <td>U</td>\n      <td>GT3</td>\n      <td>A</td>\n      <td>4</td>\n      <td>4</td>\n      <td>at_home</td>\n      <td>teacher</td>\n      <td>...</td>\n      <td>4</td>\n      <td>3</td>\n      <td>4</td>\n      <td>1</td>\n      <td>1</td>\n      <td>3</td>\n      <td>6</td>\n      <td>5</td>\n      <td>6</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>GP</td>\n      <td>F</td>\n      <td>17</td>\n      <td>U</td>\n      <td>GT3</td>\n      <td>T</td>\n      <td>1</td>\n      <td>1</td>\n      <td>at_home</td>\n      <td>other</td>\n      <td>...</td>\n      <td>5</td>\n      <td>3</td>\n      <td>3</td>\n      <td>1</td>\n      <td>1</td>\n      <td>3</td>\n      <td>4</td>\n      <td>5</td>\n      <td>5</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>GP</td>\n      <td>F</td>\n      <td>15</td>\n      <td>U</td>\n      <td>LE3</td>\n      <td>T</td>\n      <td>1</td>\n      <td>1</td>\n      <td>at_home</td>\n      <td>other</td>\n      <td>...</td>\n      <td>4</td>\n      <td>3</td>\n      <td>2</td>\n      <td>2</td>\n      <td>3</td>\n      <td>3</td>\n      <td>10</td>\n      <td>7</td>\n      <td>8</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>GP</td>\n      <td>F</td>\n      <td>15</td>\n      <td>U</td>\n      <td>GT3</td>\n      <td>T</td>\n      <td>4</td>\n      <td>2</td>\n      <td>health</td>\n      <td>services</td>\n      <td>...</td>\n      <td>3</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>5</td>\n      <td>2</td>\n      <td>15</td>\n      <td>14</td>\n      <td>15</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>GP</td>\n      <td>F</td>\n      <td>16</td>\n      <td>U</td>\n      <td>GT3</td>\n      <td>T</td>\n      <td>3</td>\n      <td>3</td>\n      <td>other</td>\n      <td>other</td>\n      <td>...</td>\n      <td>4</td>\n      <td>3</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>5</td>\n      <td>4</td>\n      <td>6</td>\n      <td>10</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>390</th>\n      <td>MS</td>\n      <td>M</td>\n      <td>20</td>\n      <td>U</td>\n      <td>LE3</td>\n      <td>A</td>\n      <td>2</td>\n      <td>2</td>\n      <td>services</td>\n      <td>services</td>\n      <td>...</td>\n      <td>5</td>\n      <td>5</td>\n      <td>4</td>\n      <td>4</td>\n      <td>5</td>\n      <td>4</td>\n      <td>11</td>\n      <td>9</td>\n      <td>9</td>\n      <td>9</td>\n    </tr>\n    <tr>\n      <th>391</th>\n      <td>MS</td>\n      <td>M</td>\n      <td>17</td>\n      <td>U</td>\n      <td>LE3</td>\n      <td>T</td>\n      <td>3</td>\n      <td>1</td>\n      <td>services</td>\n      <td>services</td>\n      <td>...</td>\n      <td>2</td>\n      <td>4</td>\n      <td>5</td>\n      <td>3</td>\n      <td>4</td>\n      <td>2</td>\n      <td>3</td>\n      <td>14</td>\n      <td>16</td>\n      <td>16</td>\n    </tr>\n    <tr>\n      <th>392</th>\n      <td>MS</td>\n      <td>M</td>\n      <td>21</td>\n      <td>R</td>\n      <td>GT3</td>\n      <td>T</td>\n      <td>1</td>\n      <td>1</td>\n      <td>other</td>\n      <td>other</td>\n      <td>...</td>\n      <td>5</td>\n      <td>5</td>\n      <td>3</td>\n      <td>3</td>\n      <td>3</td>\n      <td>3</td>\n      <td>3</td>\n      <td>10</td>\n      <td>8</td>\n      <td>7</td>\n    </tr>\n    <tr>\n      <th>393</th>\n      <td>MS</td>\n      <td>M</td>\n      <td>18</td>\n      <td>R</td>\n      <td>LE3</td>\n      <td>T</td>\n      <td>3</td>\n      <td>2</td>\n      <td>services</td>\n      <td>other</td>\n      <td>...</td>\n      <td>4</td>\n      <td>4</td>\n      <td>1</td>\n      <td>3</td>\n      <td>4</td>\n      <td>5</td>\n      <td>0</td>\n      <td>11</td>\n      <td>12</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>394</th>\n      <td>MS</td>\n      <td>M</td>\n      <td>19</td>\n      <td>U</td>\n      <td>LE3</td>\n      <td>T</td>\n      <td>1</td>\n      <td>1</td>\n      <td>other</td>\n      <td>at_home</td>\n      <td>...</td>\n      <td>3</td>\n      <td>2</td>\n      <td>3</td>\n      <td>3</td>\n      <td>3</td>\n      <td>5</td>\n      <td>5</td>\n      <td>8</td>\n      <td>9</td>\n      <td>9</td>\n    </tr>\n  </tbody>\n</table>\n<p>395 rows × 33 columns</p>\n</div>"
      },
-     "execution_count": 69,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,21 +88,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-14T22:09:37.004119306Z",
-     "start_time": "2023-10-14T22:09:36.940272990Z"
+     "end_time": "2023-10-15T16:32:24.054966303Z",
+     "start_time": "2023-10-15T16:32:22.322555668Z"
     }
    },
    "id": "2dbb60d84118e162"
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 79,
    "outputs": [
     {
      "data": {
       "text/plain": "(395, 33)"
      },
-     "execution_count": 70,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,15 +113,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-14T22:09:37.009526659Z",
-     "start_time": "2023-10-14T22:09:36.950768023Z"
+     "end_time": "2023-10-15T16:32:24.055608149Z",
+     "start_time": "2023-10-15T16:32:22.328400307Z"
     }
    },
    "id": "591305fd3212c6d5"
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 80,
    "outputs": [],
    "source": [
     "from enum import Enum\n",
@@ -133,21 +133,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-14T22:09:37.010040777Z",
-     "start_time": "2023-10-14T22:09:36.969011145Z"
+     "end_time": "2023-10-15T16:32:24.055881510Z",
+     "start_time": "2023-10-15T16:32:22.343699218Z"
     }
    },
    "id": "32c652ed34fd0f57"
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 81,
    "outputs": [
     {
      "data": {
       "text/plain": "{'school': <ColumnType.NAME: 3>,\n 'sex': <ColumnType.NAME: 3>,\n 'address': <ColumnType.NAME: 3>,\n 'famsize': <ColumnType.NAME: 3>,\n 'Pstatus': <ColumnType.NAME: 3>,\n 'Mjob': <ColumnType.NAME: 3>,\n 'Fjob': <ColumnType.NAME: 3>,\n 'reason': <ColumnType.NAME: 3>,\n 'guardian': <ColumnType.NAME: 3>,\n 'schoolsup': <ColumnType.NAME: 3>,\n 'famsup': <ColumnType.NAME: 3>,\n 'paid': <ColumnType.NAME: 3>,\n 'activities': <ColumnType.NAME: 3>,\n 'nursery': <ColumnType.NAME: 3>,\n 'higher': <ColumnType.NAME: 3>,\n 'internet': <ColumnType.NAME: 3>,\n 'romantic': <ColumnType.NAME: 3>,\n 'age': <ColumnType.ABSOLUTE: 1>,\n 'absences': <ColumnType.ABSOLUTE: 1>,\n 'Medu': <ColumnType.ORDER: 2>,\n 'Fedu': <ColumnType.ORDER: 2>,\n 'traveltime': <ColumnType.ORDER: 2>,\n 'studytime': <ColumnType.ORDER: 2>,\n 'failures': <ColumnType.ORDER: 2>,\n 'famrel': <ColumnType.ORDER: 2>,\n 'freetime': <ColumnType.ORDER: 2>,\n 'goout': <ColumnType.ORDER: 2>,\n 'Dalc': <ColumnType.ORDER: 2>,\n 'Walc': <ColumnType.ORDER: 2>,\n 'health': <ColumnType.ORDER: 2>,\n 'G1': <ColumnType.ORDER: 2>,\n 'G2': <ColumnType.ORDER: 2>,\n 'G3': <ColumnType.ORDER: 2>}"
      },
-     "execution_count": 72,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,15 +170,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-14T22:09:37.133798638Z",
-     "start_time": "2023-10-14T22:09:36.975666881Z"
+     "end_time": "2023-10-15T16:32:24.056533762Z",
+     "start_time": "2023-10-15T16:32:22.362319245Z"
     }
    },
    "id": "c2aed0544c739d8e"
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 82,
    "outputs": [],
    "source": [
     "def calcDiffMatrix(data, column_type_map):\n",
@@ -228,15 +228,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-14T22:09:37.134298438Z",
-     "start_time": "2023-10-14T22:09:37.024181083Z"
+     "end_time": "2023-10-15T16:32:24.056915448Z",
+     "start_time": "2023-10-15T16:32:22.404549634Z"
     }
    },
    "id": "60043a99c0d99177"
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "outputs": [
     {
      "name": "stdout",
@@ -286,365 +286,8 @@
       "41\n",
       "42\n",
       "43\n",
-      "44\n",
-      "45\n",
-      "46\n",
-      "47\n",
-      "48\n",
-      "49\n",
-      "50\n",
-      "51\n",
-      "52\n",
-      "53\n",
-      "54\n",
-      "55\n",
-      "56\n",
-      "57\n",
-      "58\n",
-      "59\n",
-      "60\n",
-      "61\n",
-      "62\n",
-      "63\n",
-      "64\n",
-      "65\n",
-      "66\n",
-      "67\n",
-      "68\n",
-      "69\n",
-      "70\n",
-      "71\n",
-      "72\n",
-      "73\n",
-      "74\n",
-      "75\n",
-      "76\n",
-      "77\n",
-      "78\n",
-      "79\n",
-      "80\n",
-      "81\n",
-      "82\n",
-      "83\n",
-      "84\n",
-      "85\n",
-      "86\n",
-      "87\n",
-      "88\n",
-      "89\n",
-      "90\n",
-      "91\n",
-      "92\n",
-      "93\n",
-      "94\n",
-      "95\n",
-      "96\n",
-      "97\n",
-      "98\n",
-      "99\n",
-      "100\n",
-      "101\n",
-      "102\n",
-      "103\n",
-      "104\n",
-      "105\n",
-      "106\n",
-      "107\n",
-      "108\n",
-      "109\n",
-      "110\n",
-      "111\n",
-      "112\n",
-      "113\n",
-      "114\n",
-      "115\n",
-      "116\n",
-      "117\n",
-      "118\n",
-      "119\n",
-      "120\n",
-      "121\n",
-      "122\n",
-      "123\n",
-      "124\n",
-      "125\n",
-      "126\n",
-      "127\n",
-      "128\n",
-      "129\n",
-      "130\n",
-      "131\n",
-      "132\n",
-      "133\n",
-      "134\n",
-      "135\n",
-      "136\n",
-      "137\n",
-      "138\n",
-      "139\n",
-      "140\n",
-      "141\n",
-      "142\n",
-      "143\n",
-      "144\n",
-      "145\n",
-      "146\n",
-      "147\n",
-      "148\n",
-      "149\n",
-      "150\n",
-      "151\n",
-      "152\n",
-      "153\n",
-      "154\n",
-      "155\n",
-      "156\n",
-      "157\n",
-      "158\n",
-      "159\n",
-      "160\n",
-      "161\n",
-      "162\n",
-      "163\n",
-      "164\n",
-      "165\n",
-      "166\n",
-      "167\n",
-      "168\n",
-      "169\n",
-      "170\n",
-      "171\n",
-      "172\n",
-      "173\n",
-      "174\n",
-      "175\n",
-      "176\n",
-      "177\n",
-      "178\n",
-      "179\n",
-      "180\n",
-      "181\n",
-      "182\n",
-      "183\n",
-      "184\n",
-      "185\n",
-      "186\n",
-      "187\n",
-      "188\n",
-      "189\n",
-      "190\n",
-      "191\n",
-      "192\n",
-      "193\n",
-      "194\n",
-      "195\n",
-      "196\n",
-      "197\n",
-      "198\n",
-      "199\n",
-      "200\n",
-      "201\n",
-      "202\n",
-      "203\n",
-      "204\n",
-      "205\n",
-      "206\n",
-      "207\n",
-      "208\n",
-      "209\n",
-      "210\n",
-      "211\n",
-      "212\n",
-      "213\n",
-      "214\n",
-      "215\n",
-      "216\n",
-      "217\n",
-      "218\n",
-      "219\n",
-      "220\n",
-      "221\n",
-      "222\n",
-      "223\n",
-      "224\n",
-      "225\n",
-      "226\n",
-      "227\n",
-      "228\n",
-      "229\n",
-      "230\n",
-      "231\n",
-      "232\n",
-      "233\n",
-      "234\n",
-      "235\n",
-      "236\n",
-      "237\n",
-      "238\n",
-      "239\n",
-      "240\n",
-      "241\n",
-      "242\n",
-      "243\n",
-      "244\n",
-      "245\n",
-      "246\n",
-      "247\n",
-      "248\n",
-      "249\n",
-      "250\n",
-      "251\n",
-      "252\n",
-      "253\n",
-      "254\n",
-      "255\n",
-      "256\n",
-      "257\n",
-      "258\n",
-      "259\n",
-      "260\n",
-      "261\n",
-      "262\n",
-      "263\n",
-      "264\n",
-      "265\n",
-      "266\n",
-      "267\n",
-      "268\n",
-      "269\n",
-      "270\n",
-      "271\n",
-      "272\n",
-      "273\n",
-      "274\n",
-      "275\n",
-      "276\n",
-      "277\n",
-      "278\n",
-      "279\n",
-      "280\n",
-      "281\n",
-      "282\n",
-      "283\n",
-      "284\n",
-      "285\n",
-      "286\n",
-      "287\n",
-      "288\n",
-      "289\n",
-      "290\n",
-      "291\n",
-      "292\n",
-      "293\n",
-      "294\n",
-      "295\n",
-      "296\n",
-      "297\n",
-      "298\n",
-      "299\n",
-      "300\n",
-      "301\n",
-      "302\n",
-      "303\n",
-      "304\n",
-      "305\n",
-      "306\n",
-      "307\n",
-      "308\n",
-      "309\n",
-      "310\n",
-      "311\n",
-      "312\n",
-      "313\n",
-      "314\n",
-      "315\n",
-      "316\n",
-      "317\n",
-      "318\n",
-      "319\n",
-      "320\n",
-      "321\n",
-      "322\n",
-      "323\n",
-      "324\n",
-      "325\n",
-      "326\n",
-      "327\n",
-      "328\n",
-      "329\n",
-      "330\n",
-      "331\n",
-      "332\n",
-      "333\n",
-      "334\n",
-      "335\n",
-      "336\n",
-      "337\n",
-      "338\n",
-      "339\n",
-      "340\n",
-      "341\n",
-      "342\n",
-      "343\n",
-      "344\n",
-      "345\n",
-      "346\n",
-      "347\n",
-      "348\n",
-      "349\n",
-      "350\n",
-      "351\n",
-      "352\n",
-      "353\n",
-      "354\n",
-      "355\n",
-      "356\n",
-      "357\n",
-      "358\n",
-      "359\n",
-      "360\n",
-      "361\n",
-      "362\n",
-      "363\n",
-      "364\n",
-      "365\n",
-      "366\n",
-      "367\n",
-      "368\n",
-      "369\n",
-      "370\n",
-      "371\n",
-      "372\n",
-      "373\n",
-      "374\n",
-      "375\n",
-      "376\n",
-      "377\n",
-      "378\n",
-      "379\n",
-      "380\n",
-      "381\n",
-      "382\n",
-      "383\n",
-      "384\n",
-      "385\n",
-      "386\n",
-      "387\n",
-      "388\n",
-      "389\n",
-      "390\n",
-      "391\n",
-      "392\n",
-      "393\n"
+      "44\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": "array([[0.        , 0.48781664, 0.47301452, ..., 0.56620388, 0.58736691,\n        0.5464032 ],\n       [0.48781664, 0.        , 0.46978449, ..., 0.46851523, 0.52237332,\n        0.47289287],\n       [0.47301452, 0.46978449, 0.        , ..., 0.56779788, 0.50739624,\n        0.4618352 ],\n       ...,\n       [0.56620388, 0.46851523, 0.56779788, ..., 0.        , 0.39171992,\n        0.43882501],\n       [0.58736691, 0.52237332, 0.50739624, ..., 0.39171992, 0.        ,\n        0.39803261],\n       [0.5464032 , 0.47289287, 0.4618352 , ..., 0.43882501, 0.39803261,\n        0.        ]])"
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -653,36 +296,24 @@
    ],
    "metadata": {
     "collapsed": false,
+    "is_executing": true,
     "ExecuteTime": {
-     "end_time": "2023-10-14T22:13:06.801539340Z",
-     "start_time": "2023-10-14T22:09:37.024390334Z"
+     "start_time": "2023-10-15T16:32:22.404849045Z"
     }
    },
    "id": "83340793329a7aa"
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "0.41253780216994806"
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "sub_matrix = diff_matrix[diff_matrix > 0.2]\n",
     "sub_matrix"
    ],
    "metadata": {
     "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-14T22:14:04.560467551Z",
-     "start_time": "2023-10-14T22:14:04.481771349Z"
-    }
+    "is_executing": true
    },
    "id": "6926ede0fb3c19d8"
   }
